# ffmepgdemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/conykais/ffmepgdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AVpacket_queue.c  FFmpegMusic.h  FFmpegVideo.h  audio_player.c  media_player.c  native-lib.cpp  native2-lib.cpp  openSL_audio_player.c
app/src/main/cpp/ffmpeg/: config-arm64-v8a.txt  config-armeabi-v7a.txt  config-x86.txt
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  version.h
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h  frame.h  imgutils.h  pixfmt.h
app/src/main/java/conykais/ffmepgdemo/: AudioPlayer.kt  MainActivity.kt  MediaPlayer.kt  Play.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/conykais/ffmepgdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
